[gd_scene load_steps=19 format=2]

[ext_resource path="res://decorations/kisspng-robot-enter-the-gungeon-pixel-art-kinetic-art-5b04448cf2c7e4.3274136015270063489944-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://scenes/dropZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/display.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=4]
[ext_resource path="res://scenes/processador.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/memoria.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/software.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/quit.gd" type="Script" id=8]
[ext_resource path="res://scripts/instructions.gd" type="Script" id=9]
[ext_resource path="res://decorations/PixelIntv-OPxd.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scripts/memoriaZone.gd" type="Script" id=12]
[ext_resource path="res://scripts/processadorZone.gd" type="Script" id=13]
[ext_resource path="res://scripts/softwareZone.gd" type="Script" id=14]
[ext_resource path="res://scripts/initialZone.gd" type="Script" id=15]
[ext_resource path="res://scripts/displayZone.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 10 )

[node name="Node2D" type="Node2D"]

[node name="Kisspng-robot-enter-the-gungeon-pixel-art-kinetic-art-5B04448Cf2C7E43274136015270063489944-removebg-preview" type="Sprite" parent="."]
position = Vector2( 495, 292 )
texture = ExtResource( 1 )

[node name="Time" type="Label" parent="."]
margin_left = 904.0
margin_top = 18.0
margin_right = 945.0
margin_bottom = 39.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "03:00"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Time"]

[node name="dropZone" parent="." instance=ExtResource( 2 )]
position = Vector2( 108, 224 )
script = ExtResource( 15 )

[node name="dropZone2" parent="." instance=ExtResource( 2 )]
position = Vector2( 108, 376 )
script = ExtResource( 15 )

[node name="dropZone4" parent="." instance=ExtResource( 2 )]
position = Vector2( 874, 224 )
script = ExtResource( 15 )

[node name="dropZone5" parent="." instance=ExtResource( 2 )]
position = Vector2( 874, 376 )
script = ExtResource( 15 )

[node name="memoriaZone" parent="." instance=ExtResource( 2 )]
position = Vector2( 502, 169 )
script = ExtResource( 12 )

[node name="displayZone" parent="." instance=ExtResource( 2 )]
position = Vector2( 580, 276 )
script = ExtResource( 16 )
displayCorrect = true

[node name="softwareZone" parent="." instance=ExtResource( 2 )]
position = Vector2( 429, 278 )
script = ExtResource( 14 )

[node name="processadorZone" parent="." instance=ExtResource( 2 )]
position = Vector2( 502, 389 )
script = ExtResource( 13 )

[node name="display" parent="." instance=ExtResource( 3 )]
position = Vector2( 110, 226 )

[node name="processador" parent="." instance=ExtResource( 5 )]
position = Vector2( 109, 375 )

[node name="memoria" parent="." instance=ExtResource( 6 )]
position = Vector2( 874, 224 )

[node name="software" parent="." instance=ExtResource( 7 )]
position = Vector2( 874, 374 )

[node name="back" type="Button" parent="."]
margin_left = 39.0
margin_top = 16.0
margin_right = 164.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
text = "SAIR"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instructions" type="Label" parent="."]
margin_left = 58.0
margin_top = 77.0
margin_right = 419.0
margin_bottom = 93.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 3 )
text = "Vamos come√ßar com o display. Mova pra o local correto."
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Time/Timer" to="Time" method="_on_Timer_timeout"]
[connection signal="memoriaCorrect" from="memoriaZone" to="memoriaZone" method="_on_memoriaZone_memoriaCorrect"]
[connection signal="memoriaCorrect" from="memoriaZone" to="processadorZone" method="_on_memoriaZone_memoriaCorrect"]
[connection signal="memoriaCorrect" from="memoriaZone" to="instructions" method="_on_memoriaZone_memoriaCorrect"]
[connection signal="displayCorrect" from="displayZone" to="memoriaZone" method="_on_displayZone_displayCorrect"]
[connection signal="displayCorrect" from="displayZone" to="displayZone" method="_on_displayZone_displayCorrect"]
[connection signal="displayCorrect" from="displayZone" to="instructions" method="_on_displayZone_displayCorrect"]
[connection signal="softwareCorrect" from="softwareZone" to="Time" method="_on_softwareZone_softwareCorrect"]
[connection signal="softwareCorrect" from="softwareZone" to="softwareZone" method="_on_softawreZone_softwareCorrect"]
[connection signal="softwareCorrect" from="softwareZone" to="instructions" method="_on_softawreZone_softwareCorrect"]
[connection signal="processadorCorrect" from="processadorZone" to="softwareZone" method="_on_processadorZone_processadorCorrect"]
[connection signal="processadorCorrect" from="processadorZone" to="processadorZone" method="_on_processadorZone_processadorCorrect"]
[connection signal="processadorCorrect" from="processadorZone" to="instructions" method="_on_processadorZone_processadorCorrect"]
[connection signal="pressed" from="back" to="back" method="_on_back_pressed"]
